Fixed site linking in the galleryview on small devices

--- a/css/pages/galleryview.css
+++ b/css/pages/galleryview.css
@@ -276,7 +276,7 @@ span.transcription {
   width: 100%;
   top: 2%;
   text-align: center;
-  font-size: 0.618rem;
+  font-size: 1rem;
   z-index: 3; }
   .transcription-container-touch div {
     display: block;
@@ -302,54 +302,6 @@ span.transcription {
   width: 300px;
   margin: 0.618rem auto; }
 
-.loading-spinner {
-  margin: 100px auto;
-  width: 40px;
-  height: 40px;
-  position: absolute;
-  text-align: center;
-  top: 5%;
-  -webkit-animation: rotate 2s infinite linear;
-  animation: rotate 2s infinite linear; }
-
-.dot1, .dot2 {
-  width: 60%;
-  height: 60%;
-  display: inline-block;
-  position: absolute;
-  top: 0;
-  background-color: #333;
-  border-radius: 100%;
-  -webkit-animation: bounce 2s infinite ease-in-out;
-  animation: bounce 2s infinite ease-in-out; }
-
-.dot2 {
-  top: auto;
-  bottom: 0px;
-  -webkit-animation-delay: -1s;
-  animation-delay: -1s; }
-
-@-webkit-keyframes rotate {
-  100% {
-    -webkit-transform: rotate(360deg); } }
-
-@keyframes rotate {
-  100% {
-    transform: rotate(360deg);
-    -webkit-transform: rotate(360deg); } }
-
-@-webkit-keyframes bounce {
-  0%, 100% {
-    -webkit-transform: scale(0); }
-
-  50% {
-    -webkit-transform: scale(1); } }
-
-@keyframes bounce {
-  0%, 100% {
-    transform: scale(0);
-    -webkit-transform: scale(0); }
-
-  50% {
-    transform: scale(1);
-    -webkit-transform: scale(1); } }
+@media screen and (max-width: 640px) {
+  .jg-image a {
+    cursor: default; } }
